--- a/commerces.html
+++ b/commerces.html
@@ -15,43 +15,52 @@
 <main class="content">
 
   <div class="detail-card">
-    <i class="fa-solid fa-cookie-bite"></i>
-    <h2 class="i18n" data-fr="Boulangerie" data-en="Bakery"></h2>
-    <p>
-      <b>Boulangerie de la Pinède</b><br>
-      <span class="i18n" data-fr="Idéale pour les croissants du matin et le pain frais." data-en="Ideal for morning croissants and fresh bread."></span><br>
-      <i>2 Avenue Gallice, 06160</i>
-    </p>
+    <img src="https://images.pexels.com/photos/1729828/pexels-photo-1729828.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Boulangerie" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
+    <h2>Boulangerie de la Pinède</h2>
+    <p class="i18n" data-fr="Idéale pour les croissants du matin et le pain frais. Un incontournable pour bien commencer la journée." data-en="Perfect for morning croissants and fresh bread. A must-visit to start the day right."></p>
     <a href="https://www.google.com/maps/search/?api=1&query=Boulangerie+de+la+Pinède+2+Avenue+Gallice+06160" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
   </div>
 
   <div class="detail-card">
-    <i class="fa-solid fa-cart-shopping"></i>
-    <h2 class="i18n" data-fr="Supermarché" data-en="Supermarket"></h2>
-    <p>
-      <b>Carrefour City</b><br>
-      <span class="i18n" data-fr="Pour toutes vos courses du quotidien." data-en="For all your daily groceries."></span><br>
-      <i>10 Boulevard Edouard Baudoin, 06160</i>
-    </p>
+    <img src="https://images.pexels.com/photos/264636/pexels-photo-264636.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Supermarché" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
+    <h2>Carrefour City</h2>
+    <p class="i18n" data-fr="Pour toutes vos courses du quotidien, ce supermarché de proximité offre un large choix de produits." data-en="For all your daily groceries, this local supermarket offers a wide selection of products."></p>
     <a href="https://www.google.com/maps/search/?api=1&query=Carrefour+City+10+Boulevard+Edouard+Baudoin+06160" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
   </div>
   
   <div class="detail-card">
-    <i class="fa-solid fa-pills"></i>
-    <h2 class="i18n" data-fr="Pharmacie" data-en="Pharmacy"></h2>
-    <p>
-      <b>Pharmacie du Littoral</b><br>
-      <span class="i18n" data-fr="La plus proche pour tous les besoins de santé." data-en="The closest for any health needs."></span><br>
-      <i>2 Avenue Guy de Maupassant, 06160</i>
-    </p>
+    <img src="https://images.pexels.com/photos/3683074/pexels-photo-3683074.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Pharmacie" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
+    <h2>Pharmacie du Littoral</h2>
+    <p class="i18n" data-fr="La plus proche pour tous les besoins de santé, avec une équipe prête à vous conseiller." data-en="The closest for all health needs, with a team ready to advise you."></p>
     <a href="https://www.google.com/maps/search/?api=1&query=Pharmacie+du+Littoral+2+Avenue+Guy+de+Maupassant+06160" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
+  </div>
+
+  <div class="detail-card">
+    <img src="https://images.pexels.com/photos/8949219/pexels-photo-8949219.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cave à vin" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
+    <h2>Le Goût du Vin (Cave)</h2>
+    <p class="i18n" data-fr="Pour découvrir les vins de Provence et d'ailleurs. Parfait pour accompagner vos apéritifs et repas." data-en="To discover wines from Provence and elsewhere. Perfect to accompany your aperitifs and meals."></p>
+    <a href="http://googleusercontent.com/maps.google.com/a" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
+  </div>
+
+  <div class="detail-card">
+    <img src="https://images.pexels.com/photos/709823/pexels-photo-709823.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Marché provençal" style="width: 100%; border-radius: 8px; margin-bottom: 1rem;">
+    <h2>Marché Provençal (Antibes)</h2>
+    <p class="i18n" data-fr="Dans le Vieil Antibes, un marché couvert incontournable pour ses produits locaux : épices, olives, fromages..." data-en="In Old Antibes, a must-see covered market for its local products: spices, olives, cheeses..."></p>
+    <a href="http://googleusercontent.com/maps.google.com/b" target="_blank" class="map-btn i18n" data-fr="Voir sur Google Maps" data-en="View on Google Maps"></a>
   </div>
 
 </main>
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-  <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+  <a href="activites.html" class="active"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></span></a>
 </nav>
+<script>
+function setLang(lang){
+  document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});
+  localStorage.setItem('lang',lang);
+}
+document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
+</script>
 </body>
 </html>
