--- a/arrivee.html
+++ b/arrivee.html
@@ -12,9 +12,11 @@
   <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
   <h1 class="i18n" data-fr="Arrivée" data-en="Arrival"></h1>
 </header>
+
 <main class="content">
   <div class="detail-card">
-    <img src="arrivee.jpg" alt="Illustration de l'arrivée" style="width:120px; height: auto; margin: 0 auto 1.5rem; display: block;">
+    <img src="arrivee.jpg" alt="Illustration de l'arrivée" style="width:120px; height: auto; margin-bottom: 1.5rem;">
+    
     <h2 class="i18n" data-fr="Instructions d'arrivée" data-en="Arrival instructions"></h2>
     <ul>
       <li class="i18n" data-fr="Heure d'arrivée : à partir de 15h00" data-en="Check-in time: from 3:00 PM"></li>
@@ -23,11 +25,13 @@
     </ul>
   </div>
 </main>
+
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
-  <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités" data-en="Activities"></span></a>
+  <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></span></a>
 </nav>
+
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
