--- a/depart.html
+++ b/depart.html
@@ -12,10 +12,9 @@
   <a href="asavoir.html" class="back-btn"><i class="fa-solid fa-arrow-left"></i></a>
   <h1 class="i18n" data-fr="Départ" data-en="Departure"></h1>
 </header>
-
 <main class="content">
   <div class="detail-card">
-    <img src="depart.jpg" alt="Illustration du départ" style="width:120px; height: auto; margin-bottom: 1.5rem;">
+    <img src="depart.jpg" alt="Illustration du départ" class="detail-card-image">
     
     <h2 class="i18n" data-fr="Instructions de départ" data-en="Departure instructions"></h2>
     <ul>
@@ -26,13 +25,11 @@
     </ul>
   </div>
 </main>
-
 <nav class="bottom-nav">
   <a href="bienvenue.html"><i class="fa-solid fa-house"></i><span class="i18n" data-fr="Bienvenue" data-en="Welcome"></span></a>
   <a href="asavoir.html" class="active"><i class="fa-solid fa-circle-info"></i><span class="i18n" data-fr="À savoir" data-en="To know"></span></a>
   <a href="activites.html"><i class="fa-solid fa-map-location-dot"></i><span class="i18n" data-fr="Activités & Commerces" data-en="Activities & Shops"></span></a>
 </nav>
-
 <script>
 function setLang(lang){document.querySelectorAll('.i18n').forEach(el=>{el.innerHTML=el.dataset[lang];});localStorage.setItem('lang',lang);}
 document.addEventListener('DOMContentLoaded',()=>{setLang(localStorage.getItem('lang')||'fr');});
