--- a/arrivee.html
+++ b/arrivee.html
@@ -14,7 +14,7 @@
 </header>
 <main class="content">
   <div class="detail-card">
-    <img src="arrivee.jpg" alt="Illustration de l'arrivée" class="detail-card-image">
+    <i class="fa-solid fa-person-walking-luggage"></i>
     
     <h2 class="i18n" data-fr="Instructions d'arrivée" data-en="Arrival instructions"></h2>
     <ul>
