--- a/depart.html
+++ b/depart.html
@@ -14,7 +14,7 @@
 </header>
 <main class="content">
   <div class="detail-card">
-    <img src="depart.jpg" alt="Illustration du départ" class="detail-card-image">
+    <i class="fa-solid fa-person-walking-arrow-right"></i>
     
     <h2 class="i18n" data-fr="Instructions de départ" data-en="Departure instructions"></h2>
     <ul>
